# vqc-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/grid_search_20251005_021928/: all_results.json  param_grid.json  result_0.json  result_1.json  result_10.json  result_11.json  result_12.json  result_13.json  result_14.json  result_15.json  result_16.json  result_17.json  result_18.json  result_19.json  result_2.json  result_24.json  result_25.json  result_26.json  result_27.json  result_3.json  result_4.json  result_5.json  result_6.json  result_7.json  result_8.json  result_9.json
notebooks/: vqc_visualization.ipynb
tests/: test_model.py
vqc/: __init__.py  advanced_train.py  circuit.py  data.py  feature_engineering.py  hardware_efficient.py  hyperparameter_tuning.py  model.py  noise_robust_model.py  train.py
