[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vqc"
version = "0.1.0"
description = "Variational quantum classifier with PennyLane and PyTorch"
readme = "README.md"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.23",
    "pennylane>=0.34",
    "torch>=2.0",
    "scikit-learn>=1.2",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["vqc"]
